pico-image/target/thumbv6m-none-eabi/debug/build/num-rational-f874df73c02140d7/stderr
error[E0463]: can't find crate for `std`
  |
  = note: the `thumbv6m-none-eabi` target may not support the standard library
  = note: `std` is required by `autocfg_cfd5651814c07357_0` because it does not declare `#![no_std]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
error: cannot find macro `format` in this scope
 --> <anon>:2:26
  |
2 | pub fn probe() { let _ = format!("{:e}", 0_isize); }
  |                          ^^^^^^

error: aborting due to 1 previous error

